--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/hideButton"
+        android:id="@+id/removeButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="hide"/>
+        android:text="remove"/>
 
 </LinearLayout>
