--- a/app/src/main/res/layout/create_frame_layout.xml
+++ b/app/src/main/res/layout/create_frame_layout.xml
@@ -2,7 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/createFrameLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/inputEditText"
